k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  namespace: tasky
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      containers:
        - name: tasky
          # Replace ACCOUNT_ID with your AWS account ID
          image: 724772065635.dkr.ecr.us-west-2.amazonaws.com/ds5-tasky:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
